# BatteryInfo

./: .gitignore  CMakeLists.txt
cli/: CMakeLists.txt
cli/src/: main.cpp
content/: App.qml  BatterySelector.qml  BatterySelectorForm.ui.qml  CMakeLists.txt  MainScreen.qml  MainScreen.ui.qml  MainScreenForm.ui.qml
gui/: BatteryInfo.qmlproject  CMakeLists.txt  qmlmodules
gui/content/: App.qml  BatterySelectorForm.ui.qml  MainScreenForm.ui.qml  Screen01.ui.qml
gui/imports/: CMakeLists.txt
gui/imports/BatteryInfo/designer/: plugin.metainfo
gui/src/qml/: battery_info_manager_qml.h
imports/BatteryInfo/: CMakeLists.txt  qmldir
inc/battery_info/: battery_info_manager.h  dll_utils.h  types.h
src/: import_qml_plugins.h  main.cpp
src/battery/: battery_info.h  battery_info_manager.h  battery_info_manager_windows.cpp  battery_info_windows.h  types.h
src/battery_info/: battery_info_manager_windows.cpp
src/qml/: battery_info_manager_qml.h
src/ui/: NativeMainScreen.h
